semantics/analyzer/tests/snapshots/better_api_semantics__analyzer__tests__endpoint__lower_invalid_endpoint_accept_type.snap
---
source: semantics/oracle/tests/endpoint.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "expected string or array, got integer",
        labels: [
            Label {
                style: Primary,
                message: "expected string or array, got integer",
                span: Span {
                    start: 35,
                    end: 37,
                },
            },
        ],
        note: None,
    },
]
