semantics/analyzer/tests/snapshots/better_api_semantics__analyzer__tests__endpoint__lower_invalid_endpoint_missing_name.snap
---
source: semantics/oracle/tests/endpoint.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "missing endpoint name",
        labels: [
            Label {
                style: Primary,
                message: "missing endpoint name",
                span: Span {
                    start: 0,
                    end: 27,
                },
            },
        ],
        note: Some(
            "help: endpoint must have a unique name",
        ),
    },
]
