semantics/analyzer/tests/snapshots/better_api_semantics__analyzer__tests__endpoint__lower_invalid_endpoint_paths_params_not_unique.snap
---
source: semantics/oracle/tests/endpoint.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "path parameter 'slug' already defined",
        labels: [
            Label {
                style: Primary,
                message: "path parameter already defined",
                span: Span {
                    start: 56,
                    end: 60,
                },
            },
            Label {
                style: Secondary,
                message: "previously defined here",
                span: Span {
                    start: 28,
                    end: 32,
                },
            },
        ],
        note: None,
    },
]
