semantics/analyzer/tests/snapshots/better_api_semantics__analyzer__tests__endpoint__lower_invalid_endpoint_request_body_file_with_json_accept.snap
---
source: semantics/oracle/tests/endpoint.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "invalid endpoint's request body type",
        labels: [
            Label {
                style: Primary,
                message: "`accept` requires that no `file` is present in request body",
                span: Span {
                    start: 71,
                    end: 75,
                },
            },
            Label {
                style: Secondary,
                message: "`file` introduced here",
                span: Span {
                    start: 71,
                    end: 75,
                },
            },
            Label {
                style: Secondary,
                message: "`accept` defined here",
                span: Span {
                    start: 27,
                    end: 54,
                },
            },
        ],
        note: Some(
            "help: `application/json` request body must not use `file` in body",
        ),
    },
]
